--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dleitee/vitjs.git"
+    "url": "git+https://github.com/dleitee/strman.git"
   },
   "keywords": [
     "string",
@@ -22,9 +22,9 @@
   "author": "Daniel Leite de Oliveira <dleitee@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dleitee/vitjs/issues"
+    "url": "https://github.com/dleitee/strman/issues"
   },
-  "homepage": "https://github.com/dleitee/vitjs#readme",
+  "homepage": "https://github.com/dleitee/strman#readme",
   "devDependencies": {
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.6.0",
