--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
     "eslint": "^2.7.0",
     "mocha": "^2.4.5"
   }
