--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "strman",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A Javascript string manipulation library without npm dependences.",
-  "main": "index.js",
+  "main": "dist/strman.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "eslint . && mocha --compilers js:babel-register"
+    "test": "eslint ./src && mocha --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,16 @@
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "deglobalify": "^0.2.0",
+    "es6ify": "^1.6.0",
     "eslint": "^2.7.0",
-    "mocha": "^2.4.5"
+    "gulp": "^3.9.1",
+    "gulp-uglify": "^1.5.3",
+    "mocha": "^2.4.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
