--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "prepublish": "npm test && gulp",
-    "test": "eslint ./src && mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:babel-register",
+    "test:lint": "eslint ./src",
+    "test:coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha --"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,9 @@
   },
   "homepage": "https://github.com/dleitee/strman#readme",
   "devDependencies": {
+    "babel-cli": "^6.9.0",
     "babel-core": "^6.7.6",
+    "babel-istanbul": "^0.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
     "babelify": "^7.2.0",
