--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "codeclimate-test-reporter": "^0.3.1",
     "coveralls": "^2.11.9",
     "deglobalify": "^0.2.0",
     "es6ify": "^1.6.0",
