--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
+    "deep-freeze": "0.0.1",
     "deglobalify": "^0.2.0",
     "es6ify": "^1.6.0",
     "eslint": "^2.7.0",
