--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "mocha --compilers js:babel-register",
     "test:lint": "eslint ./src",
     "test:coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -R spec",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "dox" : "./node_modules/.bin/dox < ./src/slugify.js < ./src/string.cases.js < ./src/string.decoders.js < ./src/string.encoders.js < ./src/string.utils.js < ./src/strman.js > docs.json"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "coveralls": "^2.11.9",
     "deep-freeze": "0.0.1",
     "deglobalify": "^0.2.0",
+    "dox": "^0.8.1",
     "es6ify": "^1.6.0",
     "eslint": "^2.7.0",
     "gulp": "^3.9.1",
