--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "yarn": "^0.19.1"
   }
 }
