--- a/package.json
+++ b/package.json
@@ -84,23 +84,29 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.7.6",
+    "babel-eslint": "^7.1.1",
     "babel-istanbul": "^0.8.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-remove-import": "^1.0.0",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "deep-freeze": "0.0.1",
     "deglobalify": "^0.2.0",
     "dox": "^0.8.1",
     "es6ify": "^1.6.0",
-    "eslint": "^2.7.0",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-no-lenght": "^1.0.2-0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-uglify": "^1.5.3",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
+    "showdeps": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yarn": "^0.19.1"
