--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-register",
-    "test:lint": "eslint ./src",
-    "test:coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -R spec",
+    "test": "jest --coverage --expand",
+    "test-watch": "jest --watch",
+    "lint": "eslint src tests",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "dox": "./node_modules/.bin/dox < ./src/*.js > docs.json"
+    "dox": "dox < ./src/*.js > docs.json"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,12 @@
     "manipulation",
     "strman"
   ],
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
+  },
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": "airbnb/base",
@@ -90,25 +96,15 @@
     "babel-plugin-transform-remove-import": "^1.0.0",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.7.2",
-    "chai": "^3.5.0",
     "coveralls": "^2.11.9",
-    "deep-freeze": "0.0.1",
-    "deglobalify": "^0.2.0",
     "dox": "^0.8.1",
-    "es6ify": "^1.6.0",
     "eslint": "^3.16.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-no-lenght": "^1.0.2-0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-uglify": "^1.5.3",
-    "mocha": "^2.4.5",
-    "mocha-lcov-reporter": "^1.2.0",
     "showdeps": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
     "yarn": "^0.19.1"
   }
 }
