--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: node_js
 node_js:
-  - "5"
+  - "7"
 before_script:
-  - 'npm install -g gulp'
   - 'npm install'
 script:
-  - npm run test:lint
-  - npm run test:coverage
+  - npm run lint
   - npm test
 after_success:
   - 'npm run coveralls'
