--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,25 @@
 language: node_js
 node_js:
   - "7"
+
 before_script:
-  - 'npm install'
-  - echo "//registry.npmjs.org/:_authToken=${TOKEN_NPM}" > ~/.npmrc
-  - echo "//registry.npmjs.org/:_password=${PASSWORD_NPM}" > ~/.npmrc
-  - echo "//registry.npmjs.org/:username=dleitee" >> ~/.npmrc
-  - echo "//registry.npmjs.org/:email=dleitee@gmail.com" >> ~/.npmrc
+    - 'npm install'
+
+master:
+  before_script:
+    - echo "//registry.npmjs.org/:_authToken=${TOKEN_NPM}" > ~/.npmrc
+    - echo "//registry.npmjs.org/:_password=${PASSWORD_NPM}" >> ~/.npmrc
+    - echo "//registry.npmjs.org/:username=dleitee" >> ~/.npmrc
+    - echo "//registry.npmjs.org/:email=dleitee@gmail.com" >> ~/.npmrc
+
 script:
   - npm run lint
   - npm test
-  - npm run build
+
+master:
+  script:
+    - npm run build
+    - npm publish
 
 after_success:
   - 'npm run coveralls'
