--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "babel": {
     "presets": [
       "es2015",
-      "stage-0"
+      "stage-0",
+      "flow"
     ]
   },
   "eslintConfig": {
@@ -92,7 +93,7 @@
   },
   "homepage": "https://github.com/dleitee/strman#readme",
   "devDependencies": {
-    "babel-cli": "^6.9.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.7.6",
     "babel-eslint": "^7.1.1",
     "babel-istanbul": "^0.8.0",
@@ -101,6 +102,7 @@
     "babel-plugin-transform-remove-import": "^1.0.0",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.7.2",
     "coveralls": "^2.11.9",
@@ -109,6 +111,7 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-no-lenght": "^1.0.2-0",
+    "flow-bin": "^0.57.3",
     "jest": "^19.0.2",
     "jsdoc": "^3.4.3",
     "jsdoc-babel": "^0.3.0",
