--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "7"
 
 before_script:
-    - 'npm install'
+    - npm install
 
 master:
   before_script:
@@ -13,6 +13,7 @@ master:
     - echo "//registry.npmjs.org/:email=dleitee@gmail.com" >> ~/.npmrc
 
 script:
+  - npm test-version
   - npm run flow
   - npm run lint
   - npm test
@@ -23,4 +24,4 @@ master:
     - npm publish
 
 after_success:
-  - 'npm run coveralls'
+  - npm run coveralls
