add npm run test-version to travis ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ master:
     - echo "//registry.npmjs.org/:email=dleitee@gmail.com" >> ~/.npmrc
 
 script:
-  - npm test-version
+  - npm run test-version
   - npm run flow
   - npm run lint
   - npm test
