--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build:packages": "babel-node build/build.js",
-    "build:strman": "babel src --out-dir lib",
+    "build:strman": "NODE_ENV=rollup rollup -c",
     "prepublish": "npm run build:strman",
     "postpublish": "rm -rf ./lib",
     "test": "jest --coverage --expand -i",
@@ -99,6 +99,7 @@
     "babel-istanbul": "^0.8.0",
     "babel-jest": "^19.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-remove-import": "^1.0.0",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-es2015": "^6.6.0",
@@ -116,6 +117,10 @@
     "jsdoc": "^3.4.3",
     "jsdoc-babel": "^0.3.0",
     "minami": "^1.1.1",
+    "rollup": "^0.60.1",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "showdeps": "^1.0.0",
     "yarn": "^0.19.1"
   }
